feat: application layer

--- a/src/MillionRealState.Application/MillionRealState.Application.csproj
+++ b/src/MillionRealState.Application/MillionRealState.Application.csproj
@@ -19,4 +19,8 @@
     <ProjectReference Include="..\MillionRealState.Domain\MillionRealState.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Features\Owner\Validators\" />
+  </ItemGroup>
+
 </Project>
