--- a/src/MillionRealState.API/appsettings.Development.json
+++ b/src/MillionRealState.API/appsettings.Development.json
@@ -1,11 +1,12 @@
 {
   "ConnectionStrings": {
-    "MillionRealStateDb": "Server=TU_SERVIDOR_SQL;Database=MillionRealStateDb;Trusted_Connection=True;TrustServerCertificate=True;"
+    "MillionRealStateDb": "Server=millionrealstate-db,1433;Database=MillionRealStateDb;User Id=sa;Password=MilliionPassswoord1!;TrustServerCertificate=True;"
   },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  }
+  },
+  "AllowedHosts": "*"
 }
