--- a/src/MillionRealState.API/appsettings.json
+++ b/src/MillionRealState.API/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "MillionRealStateDb": "Server=millionrealstate-db,1433;Database=MillionRealStateDb;User Id=sa;Password=MilliionPassswoord1!;TrustServerCertificate=True;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
