feat: implenebte Authentication

--- a/src/MillionRealState.API/appsettings.Development.json
+++ b/src/MillionRealState.API/appsettings.Development.json
@@ -8,5 +8,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Jwt": {
+    "Issuer": "https://localhost:5001",
+    "Audience": "MillionRealStateUsers",
+    "SecretKey": "TuClaveSuperSecretaYSegura123!"
+  }
 }
