--- a/src/MillionRealState.API/appsettings.json
+++ b/src/MillionRealState.API/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "MillionRealStateDb": "Server=millionrealstate-db,1433;Database=MillionRealStateDb;User Id=sa;Password=MilliionPassswoord1!;TrustServerCertificate=True;"
+    "MillionRealStateDb": "Server=millionrealstate-db,1433;Database=MillionRealStateDb;User Id=sa;Password=MilliionPassswoord1!;TrustServerCertificate=True;",
   },
   "Logging": {
     "LogLevel": {
@@ -8,5 +8,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Jwt": {
+    "Issuer": "https://localhost:5001",
+    "Audience": "MillionRealStateUsers",
+    "SecretKey": "SuperSecretKeyForJwtToken1234567890!!"
+  }
 }
