--- a/src/MillionRealState.Infrastructure/MillionRealState.Infrastructure.csproj
+++ b/src/MillionRealState.Infrastructure/MillionRealState.Infrastructure.csproj
@@ -7,6 +7,8 @@
 	</PropertyGroup>
 
 	<ItemGroup>
+		<PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.0" />
+		<PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.0" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.0" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore.Proxies" Version="8.0.0" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.0" />
@@ -23,7 +25,6 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<Folder Include="Data\Migrations\" />
-	</ItemGroup>
-
-</Project>
+		<Folder Include="Data\Migrations\MillionStateDb\" />
+		<Folder Include="Data\Migrations\Identity\" />
+	</ItemGroup></Project>
