feat: implement autenticacion y autorizacion

--- a/src/MillionRealState.API/appsettings.Development.json
+++ b/src/MillionRealState.API/appsettings.Development.json
@@ -12,6 +12,6 @@
   "Jwt": {
     "Issuer": "https://localhost:5001",
     "Audience": "MillionRealStateUsers",
-    "SecretKey": "TuClaveSuperSecretaYSegura123!"
+    "SecretKey": "SuperSecretKeyForJwtToken1234567890!!"
   }
 }
