--- a/MillionRealState.TestsUnit/MillionRealState.TestsUnit.csproj
+++ b/MillionRealState.TestsUnit/MillionRealState.TestsUnit.csproj
@@ -14,6 +14,7 @@
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.8.0" />
     <PackageReference Include="xunit" Version="2.5.3" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.5.3" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="8.0.0" />
   </ItemGroup>
 
   <ItemGroup>
@@ -21,12 +22,12 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Infrastructure\" />
     <Folder Include="Application\" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\src\MillionRealState.Domain\MillionRealState.Domain.csproj" />
+    <ProjectReference Include="..\src\MillionRealState.Infrastructure\MillionRealState.Infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
