--- a/src/MillionRealState.API/MillionRealState.Api.csproj
+++ b/src/MillionRealState.API/MillionRealState.Api.csproj
@@ -27,6 +27,14 @@
 		<ProjectReference Include="..\MillionRealState.Infrastructure\MillionRealState.Infrastructure.csproj" />
 	</ItemGroup>
 
-
+	<ItemGroup>
+		<PackageReference Include="AutoMapper" Version="13.0.1" />
+		<PackageReference Include="FluentValidation" Version="12.1.1" />
+		<PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="11.9.0" />
+		<PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="8.0.0" />
+	</ItemGroup>
+	<ItemGroup>
+		<PackageReference Include="MediatR" Version="12.1.1" />
+	</ItemGroup>
 
 </Project>
