--- a/tests/MillionRealState.TestsUnit/MillionRealState.TestsUnit.csproj
+++ b/tests/MillionRealState.TestsUnit/MillionRealState.TestsUnit.csproj
@@ -28,4 +28,8 @@
     <Using Include="Xunit" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Application\" />
+  </ItemGroup>
+
 </Project>
